--- a/comidas-favoritas.html
+++ b/comidas-favoritas.html
@@ -47,7 +47,7 @@ tr:nth-child(even) {
     <td>CANELONES</td>
     <td>ITALIA</td>
     <td>
-	<img src="./canelones.jpg" style="width: 200px;height:200px;">
+	<img src="./Canelones.jpg" style="width: 200px;height:200px;">
 	
   </tr>
   <tr>
@@ -58,9 +58,9 @@ tr:nth-child(even) {
   </tr>
   <tr>
     <td>TORTILLA DE PAPA</td>
-    <td>ESPAÑA</td>
+    <td>ESPAÃ‘A</td>
     <td>
-	<img src="./tortilla.jpg" style="width: 200px;height:200px;">
+	<img src="./Tortilla.jpg" style="width: 200px;height:200px;">
   </tr>
   <tr>
 <a href="
